# ambit

./: .env.list  .gitignore  CITATION.cff  CONTRIBUTING.md  LICENSE  README.md  ambit_template.py  pyproject.toml
conda.recipe/: meta.yaml
doc/: ambit_doc.tex
docker/: Dockerfile  Dockerfile_devenv  Dockerfile_devenv_old  Dockerfile_mixed
docs/: requirements.txt
joss/: paper.bib  paper.md
modules/: ambit.py  base.py  boundaryconditions.py  expression.py  ioparams.py  ioroutines.py  mathutils.py  meshutils.py  mpiroutines.py  oderoutines.py  resultcheck.py  results_check.py  timeintegration.py  utilities.py  variationalform.py
testing/: ale_linelast.py  dolfinx_jit_options.json  dolfinx_jit_parameters.json  flow0d_0Dheart_syspul.py  flow0d_0Dheart_syspul_cor.py  flow0d_0Dheart_syspulcap.py  flow0d_0Dheart_syspulcap2.py  flow0d_0Dheart_syspulcapcor.py  flow0d_0Dheart_syspulcapcor_veins.py  flow0d_0Dheart_syspulcaprespir_periodic.py  flow0d_0Dheart_syspulcapveins.py  flow0d_0Dheart_syspulcor.py  flow0d_0Dheart_syspulcorvad.py  flow0d_0Dvol_4elwindkesselLpZ.py  flow0d_0Dvol_4elwindkesselLsZ.py  fluid_ale_flow0d_lalv_syspul_prescribed.py  fluid_ale_lv.py  fluid_flow0d_monolagr_taylorhood_cylinder.py  fluid_p1p1_stab_cylinder.py  fluid_p1p1_stab_cylinder_valve.py  fluid_taylorhood_cylinder.py  frsi_artseg_modepartitionunity.py  frsi_artseg_partition.py  frsi_artseg_prefile.py  frsi_artseg_prefile_iterative.py  frsi_artseg_prefile_partitioned.py  frsi_artseg_prefile_partitioned_iterative.py  frsi_artseg_prefile_partitioned_schur3x3.py  frsi_artseg_prefile_schur4x4.py  fsi_art_seg.py  fsi_lv.py  fsi_p1p1_stab_artseg.py  fsi_taylorhood_artseg.py  runtests.py  signet_0d_hypertrophy.py  solid_2Dheart_frankstarling.py  solid_bodyforce_gravity.py  solid_constraint_volume_chamber.py  solid_divcont_ptc.py  solid_flow0d_monodir2field_4elwindkesselLpZ_chamber.py  (+30 more)
tests/: .test_fsi_p1p1_stabr_artseg_neumann_neumann.py.kate-swp  ale_linelast.py  flow0d_0Dheart_syspul.py  flow0d_0Dheart_syspulcap.py  flow0d_0Dheart_syspulcapcor.py  flow0d_0Dheart_syspulcaprespir_periodic.py  flow0d_0Dheart_syspulcor.py  flow0d_0Dheart_syspulcorvad.py  flow0d_0Dvol_4elwindkesselLpZ.py  flow0d_0Dvol_4elwindkesselLsZ.py  fluid_ale_flow0d_lalv_syspul_prescribed.py  fluid_flow0d_monolagr_taylorhood_cylinder.py  runtests.py  (+199 more)
(+463 files in other folders)
