[build-system] # Require setuptool version due to https://github.com/pypa/setuptools/issues/2938
requires = ["setuptools>=61.0.0", "wheel"]

[project]
name = "ambit-fe"
version = "1.2"
description = "A FEniCS-based cardiovascular physics solver"
authors = [{name = "Marc Hirschvogel", email = "marc.hirschvogel@deepambit.com"}]
license = {file = "LICENSE"}
readme = "README.md"
keywords = [
    "finite elements",
    "solid mechanics",
    "fluid mechanics",
    "fluid-solid interaction",
    "fsi",
    "0D models",
    "3D-0D coupling",
    "monolithic",
    "lumped-parameter models",
    "model reduction",
    "heart",
    "circulation",
    "cardiac"
]
dependencies = [
    "mpmath",
    "sympy"
]

[project.urls]
"Homepage" = "https://github.com/marchirschvogel/ambit"
"Bug Tracker" = "https://github.com/marchirschvogel/ambit/issues"
